--- a/src/app/kanban/kanban.component.css
+++ b/src/app/kanban/kanban.component.css
@@ -14,7 +14,7 @@
     height: 100%;
     width: 100%;
     box-sizing: border-box;
-    
+
 }
 
 .kanban-columns{
@@ -27,7 +27,7 @@
 .column{
     border: 1px solid black;
     /* margin: 10px; */
-   
+
     min-width: 200px;
     max-width: 200px;
     margin: 3px;
@@ -42,6 +42,11 @@
   font-weight: bold;
   border: 1px solid black;
   padding: 5px;
+  display: flex;
+}
+
+.column-name{
+  width: 100%;
 }
 
 .column-content{
@@ -73,17 +78,16 @@
                 0 3px 14px 2px rgba(0, 0, 0, 0.12);
     border-radius: 20px;
   }
-  
+
   .cdk-drag-placeholder {
     opacity: 0;
   }
-  
+
   .cdk-drag-animating {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
-  
+
   .item-list.cdk-drop-list-dragging .item-box:not(.cdk-drag-placeholder) {
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
 
-  
