--- a/src/app/kanban/kanban.component.html
+++ b/src/app/kanban/kanban.component.html
@@ -11,14 +11,24 @@
       <ng-container *ngFor="let column of getModel().getColumns()">
         <div class="column" cdkDrag [hidden]="column.isDefault()">
           <div class="column-header">
-            <div class="column-name" *ngIf="getModel().getEditedColumn() != column">
+            <div
+              class="column-name"
+              *ngIf="getModel().getEditedColumn() != column"
+            >
               {{ column.getName() }}
             </div>
-            <input class="column-name" id="column-name-{{column.getId()}}" *ngIf="getModel().getEditedColumn()== column"
-            [ngModel]="getModel().getColumnName()" (ngModelChange)="getModel().setColumnName($event)"
-            (keyup)="handleEditingColumn($event)">
-            <ng-template [ngTemplateOutlet]="column_options" [ngTemplateOutletContext]="{ $implicit: column }"></ng-template>
-
+            <input
+              class="column-name"
+              id="column-name-{{ column.getId() }}"
+              *ngIf="getModel().getEditedColumn() == column"
+              [ngModel]="getModel().getColumnName()"
+              (ngModelChange)="getModel().setColumnName($event)"
+              (keyup)="handleEditingColumn($event)"
+            />
+            <ng-template
+              [ngTemplateOutlet]="column_options"
+              [ngTemplateOutletContext]="{ $implicit: column }"
+            ></ng-template>
           </div>
           <div
             class="column-content"
@@ -27,7 +37,7 @@
             #column.getId().toString()="cdkDropList"
             [cdkDropListData]="getModel().getTasks(column)"
             [cdkDropListConnectedTo]="getModel().getColumnsNames()"
-            (cdkDropListDropped)="drop($event)"
+            (cdkDropListDropped)="taskDrop($event)"
           >
             <div
               cdkDrag
@@ -71,7 +81,7 @@
               getModel().getTasks(getModel().getDefaultColumn())
             "
             [cdkDropListConnectedTo]="getModel().getColumnsNames()"
-            (cdkDropListDropped)="drop($event)"
+            (cdkDropListDropped)="taskDrop($event)"
           >
             <div
               cdkDrag
@@ -118,7 +128,7 @@
     <button
       class="button small-button insert-button"
       id="save-kanban-task-button"
-      (click)="addNewTask(column)"
+      (click)="addTask(column)"
     >
       Zapisz
     </button>
@@ -216,19 +226,19 @@
 
 <ng-template #column_options let-column>
   <div
-  class="list-item-options"
-  (click)="(null)"
-  [matMenuTriggerFor]="column_menu"
->
-  <mat-menu #column_menu="matMenu">
-    <button mat-menu-item (click)="onColumnEdit(column)">
-      Edytuj
-    </button>
-    <button mat-menu-item (click)="onColumnRemove(column)">
-      Usuń
-    </button>
-  </mat-menu>
-  ...
+    class="list-item-options"
+    (click)="(null)"
+    [matMenuTriggerFor]="column_menu"
+  >
+    <mat-menu #column_menu="matMenu">
+      <button mat-menu-item (click)="onColumnEdit(column)">
+        Edytuj
+      </button>
+      <button mat-menu-item (click)="onColumnRemove(column)">
+        Usuń
+      </button>
+    </mat-menu>
+    ...
   </div>
 </ng-template>
 
@@ -239,10 +249,10 @@
     [matMenuTriggerFor]="task_menu"
   >
     <mat-menu #task_menu="matMenu">
-      <button mat-menu-item (click)="onTaskEdit(kanban_task)">
+      <button mat-menu-item (click)="openDetails(kanban_task)">
         Edytuj
       </button>
-      <button mat-menu-item (click)="onTaskDelete(kanban_task)">
+      <button mat-menu-item (click)="removeTask(kanban_task)">
         Usuń
       </button>
       <button
@@ -277,42 +287,42 @@
 <ng-template #new_column>
   <div class="column">
     <button
-    class="column-add-button"
-    (click)="getModel().openAddingColumn()"
-    *ngIf="
-      getModel().getProject().getId() != null && !getModel().isAddingOpen()
-    "
-  >
-    Dodaj kolumne
-  </button>
-  <div *ngIf="getModel().isAddingOpen()">
-    <input id="new-column-input"
-      class="add-column-input"
-      autocomplete="off"
-      (keyup)="handleAddingNewColumn($event)"
-      [ngModel]="getModel().getColumnName()"
-      (ngModelChange)="getModel().setColumnName($event)"
-    />
-    <div class="valid-error" *ngIf="!getModel().isColumnNameValid()">
-      Nazwa nie może być pusta
-    </div>
-    <div class="buttons-container">
-      <button
-        class="button small-button insert-button"
-        id="save-subtask-button"
-        (click)="addColumn()"
-      >
-        Dodaj
-      </button>
-      <button
-        class="button small-button insert-button"
-        id="cancel-subtask-button"
-        (click)="getModel().closeAdddingColumn()"
-      >
-        Anuluj
-      </button>
+      class="column-add-button"
+      (click)="getModel().openAddingColumn()"
+      *ngIf="
+        getModel().getProject().getId() != null && !getModel().isAddingOpen()
+      "
+    >
+      Dodaj kolumne
+    </button>
+    <div *ngIf="getModel().isAddingOpen()">
+      <input
+        id="new-column-input"
+        class="add-column-input"
+        autocomplete="off"
+        (keyup)="handleAddingNewColumn($event)"
+        [ngModel]="getModel().getColumnName()"
+        (ngModelChange)="getModel().setColumnName($event)"
+      />
+      <div class="valid-error" *ngIf="!getModel().isColumnNameValid()">
+        Nazwa nie może być pusta
+      </div>
+      <div class="buttons-container">
+        <button
+          class="button small-button insert-button"
+          id="save-subtask-button"
+          (click)="addColumn()"
+        >
+          Dodaj
+        </button>
+        <button
+          class="button small-button insert-button"
+          id="cancel-subtask-button"
+          (click)="getModel().closeAdddingColumn()"
+        >
+          Anuluj
+        </button>
+      </div>
     </div>
   </div>
-  </div>
-
 </ng-template>
