--- a/src/app/details-container/project-details/project-details.component.css
+++ b/src/app/details-container/project-details/project-details.component.css
@@ -1,4 +1,4 @@
-@import '../../styles.css';
+@import '../../../styles.css';
 
 
 .project-details{
@@ -6,11 +6,9 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-   
+
     box-sizing: border-box;
 }
-
-
 
 .project-form{
     height: 100%;
