--- a/src/styles.css
+++ b/src/styles.css
@@ -70,6 +70,7 @@ html, body{
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    background-color: dimgray;
 }
 
 .list{
@@ -482,3 +483,4 @@ html, body{
 #mat-tab-label-0-2{
   margin-right: auto;
 }
+
